# rpmconstant

./: AUTHORS  ChangeLog  INSTALL  Makefile.am  Makefile.in  README  aclocal.m4  configure  configure.ac  constant.c  rpmconstant.c  rpmconstant.h  rpmconstant_internal.c  rpmconstanttbl.c  rpmh2tbl
